--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 	background-color: #212121;
 	color: white;
-	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 }
 .title {
 	text-align: center;
@@ -40,4 +40,19 @@ body {
 	text-align: center;
 	display: flex;
 	justify-content: space-between;
+}
+.temperature {
+	margin-top: 1rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	/* border: 1px solid white; */
+	/* padding: 0px 1rem; */
+}
+.temperature > p {
+	font-weight: 100 !important;
+}
+.tempDigit {
+	font-size: 30px;
+	/* float: right; */
 }
