--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 	text-align: center;
 }
 .container {
-	width: 35%;
+	width: max-content;
 	border: 1px solid white;
 	border-radius: 1rem;
 	margin: 10px auto;
